--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -7,6 +7,10 @@
 
 @include mat.all-component-themes(theme.$SkyExplorer-theme);
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
 
 html, body {
 	height: 100%;
