--- a/frontend/src/app/authentication/auth-page/auth-page.scss
+++ b/frontend/src/app/authentication/auth-page/auth-page.scss
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
+@import '../../../variables.scss';
 // body {
 // 	font-family: 'Poppins', sans-serif;
 // 	font-weight: 300;
 // 	line-height: 1.7;
-// 	color:var(--ion-color-primary);
+// 	color: $primary;
 // 	background-color: #0F0F0F;
 // }
 
@@ -13,119 +14,96 @@
 // }
 
 .authentication-card {
-	width: fit-content;
-	margin: 0 auto;
+	position: absolute;
+	right: 15vw;
+	top: 0;
+	bottom: 0;
+
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 	align-items: center;
+	width: fit-content;
+}
 
-	& > .toggle-labels {
-		text-align: center;
-		padding-bottom: 1rem;
 
-		& ion-text {
-			padding: 0 20px;
-			font-weight: 700;
-		}
-	}
+#toggle-labels {
+	display: flex;
+	justify-content: space-between;
+	gap: 4rem;
+	text-align: center;
+	padding-bottom: 1rem;
+	margin: 0;
 
-	& > input[type="checkbox"] {
-		display: none;
-
-		& + label {
-			position: relative;
-			display: block;
-			text-align: center;
-			width: 60px;
-			height: 16px;
-			border-radius: 8px;
-			padding: 0;
-			margin: 10px auto;
-			cursor: pointer;
-			background-color: var(--ion-color-primary);
-		}
-
-		& + label:before {
-			position: absolute;
-			display: block;
-			width: 36px;
-			height: 36px;
-			border-radius: 50%;
-			color: black;
-			background-color: var(--ion-color-primary);
-			font-family: 'unicons';
-			content: '\eb4f';
-			z-index: 20;
-			top: -10px;
-			left: -10px;
-			line-height: 36px;
-			text-align: center;
-			font-size: 24px;
-			transition: all 0.5s ease;
-		}
-
-		&:checked + label:before {
-			transform: translateX(44px) rotate(-270deg);
-		}
+	& ion-text {
+		padding: 0 20px;
+		font-weight: 700;
 	}
 }
 
-// .section {
-//     & p {
-//         font-weight: 500;
-//         font-size: 14px;
-//     }
+#toggle-btn {
+	display: none;
 
-//     & h4 {
-//         font-weight: 600;
-//         color:var(--ion-color-primary);
-//     }
-//     & i {
-//         color:var(--ion-color-primary);
-//     }
+	& + label {
+		position: relative;
+		display: block;
+		width: 60px;
+		height: 16px;
 
-//     & h6 span {
-//         padding: 0 20px;
-//         font-weight: 700;
-//     }
+		padding: 0;
+		margin: 10px auto;
+		text-align: center;
+		border-radius: 8px;
+		cursor: pointer;
+		background-color: $primary;
+	}
 
-// }
-// a:hover {
-//     text-decoration: none;
-// }
+	& + label:before {
+		position: absolute;
+		display: block;
+		top: -10px;
+		left: -10px;
+		width: 36px;
+		height: 36px;
 
-// .link {
-// 	color:var(--ion-color-primary);
-// 	&:hover {
-// 		color: #c4c3ca;
-// 	}
-// }
+		border-radius: 50%;
+		color: $primary-contrast;
+		background-color: $primary;
+		font-family: 'unicons';
+		content: '\eb4f';
+		line-height: 36px;
+		text-align: center;
+		font-size: 24px;
+		transition: all 0.5s ease;
+	}
 
-// .section{
-// 	position: relative;
-// 	width: 100%;
-// 	display: block;
-// }
+	&:checked + label:before {
+		transform: translateX(44px) rotate(-270deg);
+	}
 
-// .full-height{
-// 	min-height: 100vh;
-// }
-
+	&:checked ~ .card-3d-container .card-3d-wrapper {
+		transform: rotateY(180deg);
+	}
+}
 
 .card-3d-container {
-	position: relative;
-	width: 700px;
+	// position: absolute;
+	width: 600px;
 	max-width: 100%;
-	height: 500px;
+	height: 450px;
 	-webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 	perspective: 800px;
-	margin-top: 60px;
+	margin-top: 1rem;
+
+	&, & * {
+		z-index: -10;
+	}
 }
 .card-3d-wrapper {
 	width: 100%;
 	height: 100%;
-	position:absolute;
+	// position: absolute;
 	transform-style: preserve-3d;
 	-webkit-transform-style: preserve-3d;
 	transition: all 600ms ease-out;
@@ -135,7 +113,6 @@
 	backface-visibility: hidden;
 	width: 100%;
 	height: 100%;
-	background-color: #161616;
 	position: absolute;
 	border-radius: 6px;
 	transform-style: preserve-3d;
@@ -145,12 +122,8 @@
 	transform: rotateY(180deg);
 }
 
-.checkbox:checked ~ .card-3d-container .card-3d-wrapper {
-	transform: rotateY(180deg);
-}
-
 .card-content {
-	position: absolute;
+	position: relative;
 	top: 50%;
 	left: 0;
 
@@ -162,107 +135,18 @@
 	box-sizing: border-box;
 	height: 100%;
 	width: 100%;
-	padding: 15px 35px;
-	transform: translate3d(0, -50%, 35px) perspective(100px);
-	z-index: 20;
+	padding: calc(20px + 5px) calc(28px + 5px);
+	transform: translate3d(0, -50%, 65px) perspective(100px);
 
-	& * {
-		// display: grid;
-		// grid-auto-flow: column;
+	& > mat-card-content {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-gap: 3px;
+		grid-auto-rows: minmax(100px, auto);
 		width: 100%;
-		gap: 1.5px;
+
+		& > .full-width {
+			grid-column: 1 / -1;
+		}
 	}
 }
-// .form-group{
-// 	position: relative;
-// 	display: block;
-// 	margin: 0;
-// 	padding: 0;
-// }
-// .form-style {
-// 	padding: 13px 20px;
-// 	padding-left: 55px;
-// 	height: 48px;
-// 	width: 100%;
-// 	font-weight: 500;
-// 	border-radius: 4px;
-// 	font-size: 14px;
-// 	line-height: 22px;
-// 	letter-spacing: 0.5px;
-// 	outline: none;
-// 	color: #c4c3ca;
-// 	background-color: #000000;
-// 	border: none;
-// 	-webkit-transition: all 200ms linear;
-// 	transition: all 200ms linear;
-// 	box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
-
-// 	&:focus,
-// 	&:active {
-// 		border: none;
-// 		outline: none;
-// 		box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
-// 	}
-// }
-
-// ion-input {
-// 	padding: 13px 20px;
-// 	padding-left: 55px;
-// 	height: 48px;
-// 	width: 100%;
-// 	font-weight: 500;
-// 	border-radius: 4px;
-// 	font-size: 14px;
-// 	line-height: 22px;
-// 	letter-spacing: 0.5px;
-// 	outline: none;
-// 	color: #c4c3ca;
-// 	background-color: #000000;
-// 	border: none;
-// 	-webkit-transition: all 200ms linear;
-// 	transition: all 200ms linear;
-// 	box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
-
-// 	&:focus,
-// 	&:active {
-// 		border: none;
-// 		outline: none;
-// 		box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
-// 	}
-// }
-
-// .input-icon {
-// 	position: absolute;
-// 	top: 0;
-// 	left: 18px;
-// 	height: 48px;
-// 	font-size: 24px;
-// 	line-height: 48px;
-// 	text-align: left;
-// 	-webkit-transition: all 200ms linear;
-// 	transition: all 200ms linear;
-// }
-
-// .btn{
-// 	border-radius: 4px;
-// 	height: 44px;
-// 	font-size: 13px;
-// 	font-weight: 600;
-// 	text-transform: uppercase;
-// 	-webkit-transition : all 200ms linear;
-// 	transition: all 200ms linear;
-// 	padding: 0 30px;
-// 	letter-spacing: 1px;
-// 	display: -webkit-inline-flex;
-// 	display: -ms-inline-flexbox;
-// 	display: inline-flex;
-// 	align-items: center;
-// 	background-color:var(--ion-color-primary);
-// 	color: #000000;
-// 	&:hover{
-// 		background-color: #000000;
-// 		color:var(--ion-color-primary);
-// 		box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
-// 	}
-
-// }
