--- a/frontend/src/app/authentication/pages/login-page/login-page.scss
+++ b/frontend/src/app/authentication/pages/login-page/login-page.scss
@@ -32,7 +32,6 @@
 	justify-content: space-between;
 	gap: 4rem;
 	text-align: center;
-	padding-bottom: 1rem;
 	margin: 0;
 	z-index: 10;
 
@@ -54,7 +53,8 @@
 		z-index: 10;
 
 		padding: 0;
-		margin: 10px auto;
+		margin-top: 10px;
+		margin-bottom: calc(10px + 1rem);
 		text-align: center;
 		border-radius: 8px;
 		cursor: pointer;
@@ -91,13 +91,12 @@
 
 .card-3d-container {
 	// position: absolute;
-	width: 600px;
+	width: 30vw;
 	max-width: 100%;
-	height: 450px;
+	height: 65vh;
 	-webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
-	perspective: 800px;
-	margin-top: 1rem;
+	perspective: 1500px;
 }
 
 .card-3d-wrapper {
@@ -135,7 +134,7 @@
 	box-sizing: border-box;
 	height: 100%;
 	width: 100%;
-	padding: calc(20px + 5px) calc(28px + 5px);
+	padding: calc(13px + 1rem) calc(11px + 1rem);
 	transform: translate3d(0, -50%, 65px) perspective(100px);
 
 	& > mat-card-content {
