--- a/frontend/src/app/authentication/pages/login-page/login-page.html
+++ b/frontend/src/app/authentication/pages/login-page/login-page.html
@@ -11,14 +11,14 @@
 		<div class="card-3d-wrapper">
 
 			<mat-card class="card-front">
-				<form [formGroup]="loginForm" (ngSubmit)="login()" class="card-content">
+				<form class="grid" [formGroup]="loginForm" (ngSubmit)="login()">
 
 					<mat-card-header>
 						<mat-card-title>Se Connecter</mat-card-title>
 					</mat-card-header>
 
 					<mat-card-content>
-						<mat-form-field class="full-width">
+						<mat-form-field class="grid-full-width">
 							<mat-label>
 								Adresse E-mail
 								<mat-icon aria-hidden="false" aria-label="Adresse E-mail">mail</mat-icon>
@@ -26,7 +26,7 @@
 							<input matInput formControlName="email" type="text" autocomplete="email" required>
 						</mat-form-field>
 
-						<mat-form-field class="full-width">
+						<mat-form-field class="grid-full-width">
 							<mat-label>
 								Mot de Passe
 								<mat-icon aria-hidden="false" aria-label="Mot de Passe">lock</mat-icon>
@@ -43,14 +43,14 @@
 			</mat-card>
 
 			<mat-card class="card-back">
-				<form [formGroup]="registerForm" (ngSubmit)="register()" class="card-content">
+				<form class="grid" [formGroup]="registerForm" (ngSubmit)="register()">
 
 					<mat-card-header>
 						<mat-card-title>S'Inscrire</mat-card-title>
 					</mat-card-header>
 
 					<mat-card-content>
-						<mat-form-field class="full-width">
+						<mat-form-field class="grid-full-width">
 							<mat-label>
 								Adresse E-mail
 								<mat-icon aria-hidden="false" aria-label="Adresse E-mail">mail</mat-icon>
@@ -85,26 +85,26 @@
 							<input matInput formControlName="passwordConfirm" type="password" autocomplete="new-password" required>
 						</mat-form-field>
 
-						<div class="full-width">
+						<div class="grid-full-width">
 							@if (registerForm.controls['password'].errors != null && registerForm.controls['password'].touched) {
 								@if (registerForm.controls['password'].hasError('PasswordNoUppercase')) {
 									<mat-error >Le Mot de Passe doit contenir un <strong>caractère Majuscule</strong></mat-error>
 								}
 								@if (registerForm.controls['password'].hasError('PasswordNoLowercase')) {
-									<mat-error class="full-width">Le Mot de Passe doit contenir un <strong>caractère Minuscule</strong></mat-error>
+									<mat-error class="grid-full-width">Le Mot de Passe doit contenir un <strong>caractère Minuscule</strong></mat-error>
 								}
 								@if (registerForm.controls['password'].hasError('PasswordNoDigit')) {
-									<mat-error class="full-width">Le Mot de Passe doit contenir un <strong>chiffre</strong></mat-error>
+									<mat-error class="grid-full-width">Le Mot de Passe doit contenir un <strong>chiffre</strong></mat-error>
 								}
 								@if (registerForm.controls['password'].hasError('PasswordNoSpecial')) {
-									<mat-error class="full-width">Le Mot de Passe doit contenir un <strong>caractère spécial</strong>.</mat-error>
+									<mat-error class="grid-full-width">Le Mot de Passe doit contenir un <strong>caractère spécial</strong>.</mat-error>
 								}
 								@if (registerForm.controls['password'].hasError('PasswordTooShort')) {
-									<mat-error class="full-width">Le Mot de Passe doit faire au moins <strong>8</strong> caractères de long.</mat-error>
+									<mat-error class="grid-full-width">Le Mot de Passe doit faire au moins <strong>8</strong> caractères de long.</mat-error>
 								}
 							}
-							@if (registerForm.controls['password'].errors == null && registerForm.hasError('PasswordNoMatch')) {
-								<mat-error class="full-width">Les Mots de Passes doivent <strong>correspondrent</strong>.</mat-error>
+							@if (registerForm.controls['password'].errors == null && registerForm.controls['password'].touched && registerForm.hasError('PasswordNoMatch')) {
+								<mat-error class="grid-full-width">Les Mots de Passes doivent <strong>correspondrent</strong>.</mat-error>
 							}
 						</div>
 					</mat-card-content>
