--- a/frontend/src/app/authentication/pages/login-page/login-page.scss
+++ b/frontend/src/app/authentication/pages/login-page/login-page.scss
@@ -116,36 +116,12 @@
 	border-radius: 6px;
 	transform-style: preserve-3d;
 	-webkit-transform-style: preserve-3d;
+	padding: 13px 11px;
+
+	& > form.grid {
+		transform: translate3d(0, 0, 65px) perspective(100px);
+	}
 }
 .card-back {
 	transform: rotateY(180deg);
-}
-
-.card-content {
-	position: relative;
-	top: 50%;
-	left: 0;
-
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-
-	box-sizing: border-box;
-	height: 100%;
-	width: 100%;
-	padding: calc(13px + 1rem) calc(11px + 1rem);
-	transform: translate3d(0, -50%, 65px) perspective(100px);
-
-	& > mat-card-content {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-gap: 3px;
-		grid-auto-rows: minmax(100px, auto);
-		width: 100%;
-
-		& > .full-width {
-			grid-column: 1 / -1;
-		}
-	}
 }
