--- a/frontend/src/app/authentication/pages/login-page/login-page.scss
+++ b/frontend/src/app/authentication/pages/login-page/login-page.scss
@@ -84,12 +84,12 @@
 		transform: translateX(44px) rotate(-270deg);
 	}
 
-	&:checked ~ .card-3d-container .card-3d-wrapper {
+	&:checked ~ .card__container > .card__wrapper {
 		transform: rotateY(180deg);
 	}
 }
 
-.card-3d-container {
+.card__container {
 	// position: absolute;
 	width: 30vw;
 	max-width: 100%;
@@ -99,7 +99,7 @@
 	perspective: 1500px;
 }
 
-.card-3d-wrapper {
+.card__wrapper {
 	width: 100%;
 	height: 100%;
 	// position: absolute;
@@ -108,7 +108,7 @@
 	transition: all 600ms ease-out;
 }
 
-.card-front, .card-back {
+.card--front, .card--back {
 	backface-visibility: hidden;
 	width: 100%;
 	height: 100%;
@@ -120,8 +120,13 @@
 
 	& > form.grid {
 		transform: translate3d(0, 0, 65px) perspective(100px);
+
+		& .grid__container {
+			grid-template-columns: repeat(2, 1fr);
+			grid-auto-rows: minmax(100px, auto);
+		}
 	}
 }
-.card-back {
+.card--back {
 	transform: rotateY(180deg);
 }
