--- a/frontend/src/app/users/pages/user-page/user.page.scss
+++ b/frontend/src/app/users/pages/user-page/user.page.scss
@@ -1,5 +1,20 @@
-.content-container {
-	--auto-grid-min-size: 50vmax;
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
+#edit-user__form {
+
+	& .grid__container {
+		grid-template-columns: repeat(4, 1fr);
+		grid-auto-rows: minmax(100px, auto);
+
+		& .grid__child {
+			&--label {
+				grid-column: auto / span 1;
+			}
+			&--field {
+				grid-column: auto / span 3;
+			}
+
+			&--half {
+				grid-column: auto / span 2;
+			}
+		}
+	}
 }
