Functional Course Timeline

--- a/frontend/src/app/courses/pages/courses-page/courses.page.html
+++ b/frontend/src/app/courses/pages/courses-page/courses.page.html
@@ -1,1 +1,7 @@
-courses
+<section>
+	<se-course-timeline></se-course-timeline>
+
+	<button mat-raised-button color="primary" [routerLink]="['/courses/create']">
+		Ajouter
+	</button>
+</section>
