--- a/frontend/src/app/courses/components/course-timeline/course-timeline.component.scss
+++ b/frontend/src/app/courses/components/course-timeline/course-timeline.component.scss
@@ -4,20 +4,30 @@ $gap: 1em;
 $half-gap: calc($gap / 2);
 $line-width: 1px;
 
+:host {
+	width: 100%;
+}
+
 .timeline {
 	&__container {
-		padding: 20px;
+		padding-bottom: 20px;
 	}
 
 	&__grid {
+		// width: fit-content;
 		display: grid;
-		grid-template-columns: 0.5fr repeat(7, 1fr);
-		grid-auto-rows: 3rem;
+		grid-template-rows: 1fr;
+		grid-auto-rows: min(4.25vh, 3rem);
 		gap: $gap;
 		overflow: hidden;
+		overflow-x: auto;
 
 		& > * {
 			position: relative;
+			min-width: 5vw; // Added to prevent squishing
+
+			// Prevent shrinking
+			flex-shrink: 0;
 
 			&::before, &::after {
 				position: absolute;
@@ -56,6 +66,19 @@ $line-width: 1px;
 	}
 }
 
+.day {
+
+	&__header {
+		&--content {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+		}
+	}
+}
+
 .hour__label-content {
   display: flex;
   align-items: center;
@@ -67,6 +90,7 @@ $line-width: 1px;
 
 mat-card-title {
   font-size: 1.2em;
+	line-height: 1.2em;
   font-weight: bold;
   text-align: center;
 }
