--- a/frontend/src/app/courses/pages/create-course-page/create-course.page.html
+++ b/frontend/src/app/courses/pages/create-course-page/create-course.page.html
@@ -1,75 +1,112 @@
 <section>
-	<mat-card>
-		<form class="grid" [formGroup]="publishForm" (ngSubmit)="publish()">
+	@if (authentication.user && authentication.user.role > UserRoles.User) {
+		<img src="../../../../assets/vue-avion.png" alt="image" class="course-picture">
 
-			<mat-card-header>
-				<mat-card-title>S'Inscrire</mat-card-title>
-			</mat-card-header>
+		<div>
+			<mat-card-title class="mat-card-title-create-form">Créer un Cours</mat-card-title>
+			<div class="subtitle"></div>
 
-			<mat-card-content class="grid__container">
-				<mat-form-field class="grid__child--full-width">
-					<mat-label>
-						Adresse E-mail
-						<mat-icon aria-hidden="false" aria-label="Adresse E-mail">mail</mat-icon>
-					</mat-label>
-					<input matInput formControlName="email" type="text" autocomplete="email" required>
-					@if (publishForm.controls['email'].hasError('email')) {
-						<mat-error>L'Adresse E-mail doit être <strong>valide</strong></mat-error>
-					}
-				</mat-form-field>
+			<mat-card>
+				<form class="grid create-course" [formGroup]="publishForm" (ngSubmit)="publish()">
 
-				<mat-form-field>
-					<mat-label>Prénom</mat-label>
-					<input matInput formControlName="firstName" type="text" autocomplete="given-password" required>
-				</mat-form-field>
-				<mat-form-field>
-					<mat-label>Nom de Famille</mat-label>
-					<input matInput formControlName="lastName" type="text" autocomplete="family-password" required>
-				</mat-form-field>
+					<mat-card-content class="grid__container">
+						<mat-form-field class="grid__child--full-width ">
+							<mat-label>Intitulé du Cours</mat-label>
 
-				<mat-form-field>
-					<mat-label>
-						Mot de Passe
-						<mat-icon aria-hidden="false" aria-label="Mot de Passe">lock</mat-icon>
-					</mat-label>
-					<input matInput formControlName="password" type="password" autocomplete="new-password" required>
-				</mat-form-field>
-				<mat-form-field>
-					<mat-label>
-						Confirmer le Mot de Passe
-						<mat-icon aria-hidden="false" aria-label="Confirmer le Mot de Passe">check</mat-icon>
-					</mat-label>
-					<input matInput formControlName="passwordConfirm" type="password" autocomplete="new-password" required>
-				</mat-form-field>
+							<input class="create-text-input" matInput formControlName="courseName" type="text" autocomplete="Intitulé du Cours" required>
+							@if (publishForm.controls['courseName'].errors) {
+								<mat-error>Nom de cours <strong>invalide</strong></mat-error>
+							}
+						</mat-form-field>
 
-				<div class="grid__child--full-width">
-					@if (publishForm.controls['password'].errors != null && publishForm.controls['password'].touched) {
-						@if (publishForm.controls['password'].hasError('PasswordNoUppercase')) {
-							<mat-error >Le Mot de Passe doit contenir un <strong>caractère Majuscule</strong></mat-error>
+						<mat-form-field>
+							<mat-label>Élève</mat-label>
+
+							<mat-select matInput formControlName="student" [value]="studentId" required>
+								@if (students.length == 0) {
+									<mat-option disabled>Aucun Elèves Disponible</mat-option>
+								}
+								@else {
+									@for (student of students; track student) {
+										<mat-option [value]="student.id">{{student.firstName}} {{student.lastName}}</mat-option>
+									}
+								}
+							</mat-select>
+						</mat-form-field>
+						@if (authentication.user.role > UserRoles.Collaborator) {
+							<mat-form-field>
+								<mat-label>Professeur</mat-label>
+
+								<mat-select matInput formControlName="teacher" [value]="teacherId" required>
+									@if (teachers?.length == 0) {
+										<mat-option disabled>Aucun Professeur Disponible</mat-option>
+									}
+									@else {
+										@for (teacher of teachers; track teacher) {
+											<mat-option [value]="teacher.id">{{teacher.firstName}} {{teacher.lastName}}</mat-option>
+										}
+									}
+								</mat-select>
+							</mat-form-field>
 						}
-						@if (publishForm.controls['password'].hasError('PasswordNoLowercase')) {
-							<mat-error class="grid__child--full-width">Le Mot de Passe doit contenir un <strong>caractère Minuscule</strong></mat-error>
-						}
-						@if (publishForm.controls['password'].hasError('PasswordNoDigit')) {
-							<mat-error class="grid__child--full-width">Le Mot de Passe doit contenir un <strong>chiffre</strong></mat-error>
-						}
-						@if (publishForm.controls['password'].hasError('PasswordNoSpecial')) {
-							<mat-error class="grid__child--full-width">Le Mot de Passe doit contenir un <strong>caractère spécial</strong>.</mat-error>
-						}
-						@if (publishForm.controls['password'].hasError('PasswordTooShort')) {
-							<mat-error class="grid__child--full-width">Le Mot de Passe doit faire au moins <strong>8</strong> caractères de long.</mat-error>
-						}
-					}
-					@if (publishForm.controls['password'].errors == null && publishForm.controls['password'].touched && publishForm.hasError('PasswordNoMatch')) {
-						<mat-error class="grid__child--full-width">Les Mots de Passes doivent <strong>correspondrent</strong>.</mat-error>
-					}
-				</div>
-			</mat-card-content>
 
-			<mat-card-footer>
-				<button mat-raised-button>S'Inscrire</button>
-			</mat-card-footer>
+						<mat-form-field class="grid__child--full-width">
+							<mat-label>Avion</mat-label>
 
-		</form>
-	</mat-card>
+							<mat-select matInput formControlName="plane" [value]="planeId" required>
+								@if (planes.length == 0) {
+									<mat-option disabled>Aucun Avion Disponible</mat-option>
+								}
+								@else {
+									@for (plane of planes; track plane) {
+										<mat-option [value]="plane.id">{{plane.name}}</mat-option>
+									}
+								}
+							</mat-select>
+						</mat-form-field>
+
+						<mat-form-field id="date-picker__field">
+							<mat-label>Date</mat-label>
+
+							<input matInput formControlName="date" [matDatepicker]="picker" required>
+							<mat-hint>JJ/MM/AAAA</mat-hint>
+							<mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+							<mat-datepicker #picker></mat-datepicker>
+						</mat-form-field>
+						<mat-form-field>
+							<mat-label>Heure</mat-label>
+
+							<input type="time" matInput formControlName="time" required>
+						</mat-form-field>
+
+
+						<mat-form-field class="grid__child--full-width">
+							<mat-label>Durée</mat-label>
+
+							<input type="time" matInput formControlName="duration" required>
+						</mat-form-field>
+
+						<mat-card-title class="mat-card-title-create-form-subtitle">Facturation</mat-card-title>
+						<mat-form-field class="grid__child--full-width">
+							<mat-label>Nom de la facture</mat-label>
+							<input type="text" matInput formControlName="name">
+						</mat-form-field>
+
+						<mat-form-field class="grid__child--full-width">
+							<mat-label>url</mat-label>
+							<input type="url" matInput formControlName="url">
+						</mat-form-field>
+					</mat-card-content>
+
+					<mat-card-footer>
+						<button mat-raised-button color="primary" class="button-create-form">
+							Valider
+						</button>
+					</mat-card-footer>
+
+				</form>
+			</mat-card>
+
+		</div>
+	}
 </section>
