--- a/frontend/src/app/users/components/user-list/user-list.component.html
+++ b/frontend/src/app/users/components/user-list/user-list.component.html
@@ -9,7 +9,7 @@
 }
 @else {
 	@for (user of users; track user.id) {
-		<se-user [user]="user"></se-user>
+		<se-user [entity]="user"></se-user>
 	}
 	<!-- <ion-infinite-scroll (ionInfinite)="onInfiniteScroll($event)">
 		<ion-infinite-scroll-content></ion-infinite-scroll-content>
